# stm32_cmake_build

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
AppMain/: CMakeLists.txt
AppMain/inc/: main.h
AppMain/src/: main.cpp
Chip/: CMakeLists.txt
Chip/STM32F439ZITx/: CMakeLists.txt  STM32F439ZITX_FLASH.ld  STM32F439ZITx.ioc
Chip/STM32F439ZITx/Core/Inc/: cube_init.h  main.h  stm32f4xx_it.h  stm32f4xx_system_init.h
Chip/STM32F439ZITx/Core/Src/: cube_init.c  main.c  stm32_system_init.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_system_init.c  syscalls.c
Cmake/Opts/: CustomOpts.cmake  Custom_build_opts.cmake
Cmake/Toolchain/: Arm-none-eabi-toolchain.cmake
Cmake/Utils/: change_log.cmake  pre-commit.cmake  vscode-config.cmake
Cmake/Utils/configure-files/: c_cpp_properties.cfg  custom_env.cfg  launch.cfg  settings.cfg
Lib/: CMakeLists.txt
Lib/FreeRTOS/: CMakeLists.txt
Lib/FreeRTOS/FreeRTOS_custom/: cmsis_os2.c
Lib/Logger/: CMakeLists.txt
Lib/Logger/kernel/: CMakeLists.txt
Lib/Logger/kernel/inc/: Logger.h
Lib/Logger/kernel/src/: Logger.cpp
Lib/Logger/portable/: CMakeLists.txt
Lib/Logger/portable/LoggerPort/: LoggerPort.h
Lib/Logger/portable/usart/: CMakeLists.txt
Lib/Logger/portable/usart/inc/: usart.h
Lib/Logger/portable/usart/src/: usart.cpp
Lib/logger/: CMakeLists.txt
Lib/logger/inc/: logger.h
Lib/logger/src/: print_target.c
lib/: CMakeLists.txt
lib/FreeRTOS/: CMakeLists.txt
